force-app/main/default/objects/AAR_Split_Owner__c/AAR_Split_Owner__c.object-meta.xml
<CustomObject>
    <description>Advertiser Agency Relationship Split Owner</description>
    <label>AAR Split Owner</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>AAR Split Owner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Split Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>