force-app/main/default/objects/AAR_Split_Owner__c/fields/Account_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Account_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Forecast</label>
    <referenceTo>Account_Forecast__c</referenceTo>
    <relationshipLabel>AAR Split Owners</relationshipLabel>
    <relationshipName>AAR_Split_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>