force-app/main/default/objects/AAR_Split_Owner__c/fields/Advertiser_Agency_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Advertiser_Agency_Relationship__c</fullName>
    <label>Advertiser-Agency Relationship</label>
    <referenceTo>Advertiser_Agency_Relationship__c</referenceTo>
    <relationshipLabel>AAR Split Owners</relationshipLabel>
    <relationshipName>AAR_Split_Owners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>