force-app/main/default/objects/AAR_Split_Owner__c/fields/Forecast_Q1__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Q1__c</fullName>
    <label>Forecast Q1</label>
    <summarizedField>Forecast_Entry__c.Forecast_Q11__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Entry__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Entry__c.AAR_Split_Owner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>