force-app/main/default/objects/AAR_Split_Owner__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>CASESAFEID(OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>