force-app/main/default/objects/AAR_Split_Owner__c/fields/Primary_owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary owner</label>
    <type>Checkbox</type>
</CustomField>